--- a/BAITAP/B7-session2.html
+++ b/BAITAP/B7-session2.html
@@ -16,31 +16,32 @@
         </thead>
         <tbody>
             <tr>
-                <td><img src="teacher_quy.png" alt=""></td>
+                <td><img src="teacher_quy.png" alt="Thầy Quý"></td>
                 <td>Thầy Ngọ Văn Quý</td>
                 <td>Lập trình C/C++</td>
             </tr>    
             <tr>
-                <td><img src="teacher_hai.png" alt=""></td>
+                <td><img src="teacher_hai.png" alt="Thầy Hai"></td>
                 <td>Thầy Nguyễn Quốc Hai</td>
                 <td>Lập trình Python</td>
             </tr>
             <tr>
-                <td><img src="teacher_quy.png" alt=""></td>
+                <td><img src="teacher_quy.png" alt="Thầy Quý"></td>
                 <td>Thầy Ngọ Văn Quý</td>
                 <td>Lập trình Java/td>
             </tr>
             <tr>
-                <td><img src="teacher_hai.png" alt=""></td>
+                <td><img src="teacher_hai.png" alt="Thầy Hai"></td>
                 <td>Thầy Nguyễn Quốc Hai</td>
                 <td>Lập trình Web</td>
             </tr>
             <tr>
-                <td><img src="teacher_hai.png" alt=""></td>
+                <td><img src="teacher_hai.png" alt="Thầy Hai"></td>
                 <td>Thầy Nguyễn Quốc Hai</td>
                 <td>Cơ sở dữ liệu</td>
             </tr>
         </tbody>
     </table>
 </body>
+
 </html>
